--- a/app/globals.css
+++ b/app/globals.css
@@ -22,5 +22,17 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+   font-family: font2;
 }
+@font-face {
+  font-family: font2 ;
+  src: url(/font2.woff2);
+}
+@keyframes revealDown {
+  from { opacity: 0; transform: translateY(-10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+.animate-revealDown {
+  animation: revealDown .25s ease forwards;
+}
+
